# c_learning

./: CMAKE.md  Linux.md  README.md
Code/Chapter 2/: carrots.cpp  getinfo.cpp  myfirst.cpp
Code/Chapter 3/: hexoct2.cpp  limits.cpp
Code/Chapter 4/: newstrct.cpp  ptrstr.cpp
Code/Chapter 6/: cingolf.cpp  outfile.cpp  sumafile.cpp
Code/Chapter 7/: protos.cpp  readme.md  twoarg.cpp
Code/Chapter 8/: strc_ref.cpp
mycode/: CMakeLists.txt  chapter2.cpp  chapter3.cpp  chapter4.cpp
mycode/fun/: fun3.cpp  fun3.h  fun4.cpp  fun4.h
